k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daybrew-fe
  namespace: daybrew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: daybrew-fe
  template:
    metadata:
      labels:
        app: daybrew-fe
    spec:
      containers:
        - name: daybrew-fe
          image: ghcr.io/yoon6yo/devbrew-fe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
