k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daybrew-fe
  namespace: daybrew
spec:
  selector:
    app: daybrew-fe
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
