k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devbrew-fe
  namespace: devbrew
spec:
  ingressClassName: traefik
  rules:
    - host: daybrew.duckdns.org
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: devbrew
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devbrew-fe
                port:
                  number: 80
